# cmake-init

./: .gitignore  CMakeLists.txt  Readme.md
application/: CMakeLists.txt
application/src/: cmake-project.cpp  cmake-project.h
say-hello/: CMakeLists.txt
say-hello/src/sayHello/: hello.cpp  hello.hpp
